- Alterações na grid para aproveitar 100% da tela. Assim quem tem tela de 14 ou 15 não será prejudicado pelo layout vertical. Finalização da tela de Chat #47.

--- a/client/empresa/views/empresaDetails.ng.html
+++ b/client/empresa/views/empresaDetails.ng.html
@@ -1,5 +1,5 @@
 
-<div class="container">
+<div class="body-side-padding margin-top-30 space-footer background-blacked border-white">
   <div class="row profile-border" style="margin-top: 30px;">
 
     <div class="col-md-3 profile-boxes picture no-padding">
