--- a/client/trajetoria/views/trajetoria-de-desenvolvimento.ng.html
+++ b/client/trajetoria/views/trajetoria-de-desenvolvimento.ng.html
@@ -1,4 +1,4 @@
-<div class="container margin-top-30 space-footer background-blacked border-white">
+<div class="body-side-padding margin-top-30 space-footer background-blacked border-white">
 
     <ng-include src="'client/barra-controle.html'"></ng-include>
 
@@ -93,10 +93,10 @@
             </table>
         </div>
 
-        <div>
-            <h3>Resumo da trajetória:</h3>
+        <div class="resumo pull-left col-md-4 no-padding">
+            <h4>Resumo da trajetória:</h4>
 
-            <div>
+            <div class="quadrado pull-left">
                 <h4>Dias para a entrega: <span>4</span></h4>
                 <h4>Porcentagem restante: <span>38%</span></h4>
                 <h4>Atraso: <span>6%</span></h4>
