--- a/client/chat/views/chat.ng.html
+++ b/client/chat/views/chat.ng.html
@@ -1,10 +1,11 @@
 <div id="chat">
 
-    <div class="col-md-5 no-padding">
-        <div class="col-md-6 no-padding" style="padding-right: 15px !important;">
-            <h3 class="text-center">Novas Mensagens</h3>
+    <div class="col-md-5 col-xs-12 no-padding">
+        <div class="col-xs-6 no-padding" style="padding-right: 15px !important;">
+            <h4 class="text-center">Novas Mensagens</h4>
 
             <ul id="lista-mensagens" class="lista">
+
                 <li>
                     <div class="picture">
                         <img src="http://lorempixel.com/200/200" class="img-responsive"/>
@@ -16,7 +17,7 @@
 
                     </div>
                     <div class="time">
-                        <span>1</span><br/>
+                        <span>1</span>
 
                         <div>
                             <small>10/10</small>
@@ -30,13 +31,13 @@
                         <img src="http://lorempixel.com/200/200" class="img-responsive"/>
                     </div>
                     <div class="details">
-                        <h5>Rafael Gomes</h5>
+                        <h5>Victor Silveira</h5>
 
-                        <p>Ok, podemos marcar semana que vem</p>
+                        <p>Olá Julia! Como você esta?</p>
 
                     </div>
                     <div class="time">
-                        <span>1</span><br/>
+                        <span>1</span>
 
                         <div>
                             <small>10/10</small>
@@ -50,13 +51,13 @@
                         <img src="http://lorempixel.com/200/200" class="img-responsive"/>
                     </div>
                     <div class="details">
-                        <h5>Maria Neves</h5>
+                        <h5>Victor Silveira</h5>
 
-                        <p>Mas é claro que sim</p>
+                        <p>Olá Julia! Como você esta?</p>
 
                     </div>
                     <div class="time">
-                        <span>1</span><br/>
+                        <span>1</span>
 
                         <div>
                             <small>10/10</small>
@@ -65,30 +66,11 @@
                         </div>
                     </div>
                 </li>
-                <li>
-                    <div class="picture">
-                        <img src="http://lorempixel.com/200/200" class="img-responsive"/>
-                    </div>
-                    <div class="details">
-                        <h5>Renam Moreira</h5>
 
-                        <p>É um projeto de extenção, acho que...</p>
-
-                    </div>
-                    <div class="time">
-                        <span>1</span><br/>
-
-                        <div>
-                            <small>10/10</small>
-                            <br/>
-                            <small>22:00</small>
-                        </div>
-                    </div>
-                </li>
             </ul>
         </div>
-        <div class="col-md-6 no-padding" style="padding-right: 15px !important;">
-            <h3 class="text-center">Meus Contatos</h3>
+        <div class="col-xs-6 no-padding" style="padding-right: 15px !important;">
+            <h4 class="text-center">Meus Contatos</h4>
 
             <ul id="lista-contatos" class="lista">
                 <li>
@@ -158,89 +140,106 @@
             </ul>
         </div>
     </div>
-    <div class="col-md-7 no-padding">
-        <h3 class="text-center">Renam Moreira</h3>
+    <div class="col-md-7 col-xs-12 no-padding">
+        <h4 class="text-center">Renam Moreira</h4>
 
-        <div id="conversa">
-            <div class="mensagens overflow-hidden">
-                <div class="mensagem me">
-                    <div class="col-md-1 picture">
-                        <img src="http://lorempixel.com/200/200" class="img-responsive"/>
-                    </div>
-                    <div class="col-md-11 text">
+        <div id="conversa"><div class="mensagens overflow-hidden">
+            <div class="mensagem other">
+                <div class="col-xs-1 picture">
+                    <img src="http://lorempixel.com/200/200" class="img-responsive"/>
+                </div>
+                <div class="col-xs-11">
+                    <span class="glyphicon glyphicon-triangle-left triangle" aria-hidden="true"></span>
+                    <div class="text">
                         <span></span>
 
                         <p>Oi Juliana! Tudo bem? Preciso de um favor seu, quando puder me ligue (:</p>
 
-                        <small>30/09 21:32</small>
-                    </div>
-                </div>
-                <div class="mensagem other">
-                    <div class="col-md-1 picture">
-                        <img src="http://lorempixel.com/200/200" class="img-responsive"/>
-                    </div>
-                    <div class="col-md-11 text">
-                        <span></span>
-
-                        <p>Oi Renam! Estou otima e você? Te liguei mas deu caixa postal. o que você precisa?</p>
-
-                        <small>30/09 21:32</small>
-                    </div>
-                </div>
-                <div class="mensagem me">
-                    <div class="col-md-1 picture">
-                        <img src="http://lorempixel.com/200/200" class="img-responsive"/>
-                    </div>
-                    <div class="col-md-11 text">
-                        <span></span>
-
-                        <p>Oi Juliana! Tudo bem? Preciso de um favor seu, quando puder me ligue (:</p>
-
-                        <small>30/09 21:32</small>
-                    </div>
-                </div>
-                <div class="mensagem other">
-                    <div class="col-md-1 picture">
-                        <img src="http://lorempixel.com/200/200" class="img-responsive"/>
-                    </div>
-                    <div class="col-md-11 text">
-                        <span></span>
-
-                        <p>Oi Renam! Estou otima e você? Te liguei mas deu caixa postal. o que você precisa?</p>
-
-                        <small>30/09 21:32</small>
-                    </div>
-                </div>
-                <div class="mensagem me">
-                    <div class="col-md-1 picture">
-                        <img src="http://lorempixel.com/200/200" class="img-responsive"/>
-                    </div>
-                    <div class="col-md-11 text">
-                        <span></span>
-
-                        <p>Oi Juliana! Tudo bem? Preciso de um favor seu, quando puder me ligue (:</p>
-
-                        <small>30/09 21:32</small>
-                    </div>
-                </div>
-                <div class="mensagem other">
-                    <div class="col-md-1 picture">
-                        <img src="http://lorempixel.com/200/200" class="img-responsive"/>
-                    </div>
-                    <div class="col-md-11 text">
-                        <span></span>
-
-                        <p>Oi Renam! Estou otima e você? Te liguei mas deu caixa postal. o que você precisa?</p>
-
-                        <small>30/09 21:32</small>
+                        <small class="time">30/09 21:32</small>
                     </div>
                 </div>
             </div>
-            <div>
-                <div class="col-md-10">
+            <div class="mensagem me">
+                <div class="col-xs-1 picture">
+                    <img src="http://lorempixel.com/200/200" class="img-responsive"/>
+                </div>
+                <div class="col-xs-11">
+                    <span class="glyphicon glyphicon-triangle-left triangle" aria-hidden="true"></span>
+                    <div class="text">
+                        <span></span>
+
+                        <p>Oi Renam! Estou otima e você? Te liguei mas deu caixa postal. o que você precisa?</p>
+
+                        <small class="time">30/09 21:32</small>
+                    </div>
+                </div>
+            </div>
+            <div class="mensagem other">
+                <div class="col-xs-1 picture">
+                    <img src="http://lorempixel.com/200/200" class="img-responsive"/>
+                </div>
+                <div class="col-xs-11">
+                    <span class="glyphicon glyphicon-triangle-left triangle" aria-hidden="true"></span>
+                    <div class="text">
+                        <span></span>
+
+                        <p>Oi Juliana! Tudo bem? Preciso de um favor seu, quando puder me ligue (:</p>
+
+                        <small class="time">30/09 21:32</small>
+                    </div>
+                </div>
+            </div>
+            <div class="mensagem me">
+                <div class="col-xs-1 picture">
+                    <img src="http://lorempixel.com/200/200" class="img-responsive"/>
+                </div>
+                <div class="col-xs-11">
+                    <span class="glyphicon glyphicon-triangle-left triangle" aria-hidden="true"></span>
+                    <div class="text">
+                        <span></span>
+
+                        <p>Oi Renam! Estou otima e você? Te liguei mas deu caixa postal. o que você precisa?</p>
+
+                        <small class="time">30/09 21:32</small>
+                    </div>
+                </div>
+            </div>
+            <div class="mensagem other">
+                <div class="col-xs-1 picture">
+                    <img src="http://lorempixel.com/200/200" class="img-responsive"/>
+                </div>
+                <div class="col-xs-11">
+                    <span class="glyphicon glyphicon-triangle-left triangle" aria-hidden="true"></span>
+                    <div class="text">
+                        <span></span>
+
+                        <p>Oi Juliana! Tudo bem? Preciso de um favor seu, quando puder me ligue (:</p>
+
+                        <small class="time">30/09 21:32</small>
+                    </div>
+                </div>
+            </div>
+            <div class="mensagem me">
+                <div class="col-xs-1 picture">
+                    <img src="http://lorempixel.com/200/200" class="img-responsive"/>
+                </div>
+                <div class="col-xs-11">
+                    <span class="glyphicon glyphicon-triangle-left triangle" aria-hidden="true"></span>
+                    <div class="text">
+                        <span></span>
+
+                        <p>Oi Renam! Estou otima e você? Te liguei mas deu caixa postal. o que você precisa?</p>
+
+                        <small class="time">30/09 21:32</small>
+                    </div>
+                </div>
+            </div>
+        </div>
+            <div class="pesquisa overflow-hidden">
+                <div class="col-xs-10">
                     <input type="text" placeholder="Escreva sua mensagem..."/>
                 </div>
-                <div class="col-md-2">
+                <div class="col-xs-2">
                     <button type="submit" class="btn btn-default btn-100-percent">Enviar</button>
                 </div>
             </div>
@@ -248,3 +247,143 @@
     </div>
 
 </div>
+
+<script>
+
+    var init = function () {
+
+        var scrollBar = function (ele, direction) {
+            ele = document.getElementById(ele);
+            var obj = {};
+
+            function constructor() {
+                ele.className = direction;
+                createSB();
+            }
+
+            function createSB() {
+                obj.domNode = document.createElement("span");
+                obj.domNode.className = "sbCtntCtnr";
+                ele.insertBefore(obj.domNode, ele.childNodes[0]);
+
+                obj.middleCtnr = document.createElement("div");
+                obj.domNode.appendChild(obj.middleCtnr);
+                obj.middleBtnCtnr = document.createElement("span");
+                obj.middleBtnCtnr.className = "middle";
+                obj.middleCtnr.appendChild(obj.middleBtnCtnr);
+                obj.scrollBtn = document.createElement("span");
+                obj.scrollBtn.className = "scrollBtn";
+                obj.middleBtnCtnr.appendChild(obj.scrollBtn);
+                obj.scrollBtn.style.left = 0;
+                obj.scrollBtn.style.top = 0;
+                obj.scrollBtn.onmousedown = handleDrag;
+
+                handleDrag();
+
+                function handleDrag() {
+                    var args = arguments;
+                    console.log(args);
+
+                    if (args.length) {
+                        obj.xScroll = parseInt(obj.scrollBtn.style.left);
+                        obj.yScroll = parseInt(obj.scrollBtn.style.top);
+                        switch (args[0].target.className) {
+                            case "scrollBtn":
+                                startDrag(args[0]);
+                                break;
+                        }
+                    } else {
+                        var info = getScrollArea();
+                        obj.scrollBtn.style.height = info.H / obj.scrollBtn.parentNode.offsetHeight + "px";
+                        obj.scrollBtn.style.width = info.W / obj.scrollBtn.parentNode.offsetWidth + "px";
+
+                    }
+                }
+
+            }
+
+            function startDrag() {
+                obj.xStart = arguments[0].clientX;
+                obj.yStart = arguments[0].clientY;
+                document.addEventListener("mousemove", doDrag, false);
+                document.addEventListener("mouseup", endDrag, false);
+            }
+
+            function doDrag(event) {
+                event.preventDefault();
+                obj.xCurr = event.clientX;
+                obj.yCurr = event.clientY;
+                //updatePosition();
+                handleMove();
+                return false;
+            }
+
+            function endDrag(event) {
+                event.preventDefault()
+                document.removeEventListener("mousemove", doDrag);
+                document.removeEventListener("mouseup", endDrag);
+                console.log(event);
+                return false;
+            }
+
+            function handleMove(amount) {
+                var differences = amount ? {
+                    x: obj.xScroll + (amount.x || 0),
+                    y: obj.yScroll + (amount.y || 0)
+                } : {
+                    x: obj.xCurr - obj.xStart + obj.xScroll,
+                    y: obj.yCurr - obj.yStart + obj.yScroll
+                };
+
+                switch (direction) {
+                    case "vertical":
+                        if (differences.y < 0) {
+                            differences.y = 0;
+                        } else if (differences.y > (obj.middleCtnr.offsetHeight - obj.scrollBtn.offsetHeight)) {
+                            differences.y = (obj.middleCtnr.offsetHeight - obj.scrollBtn.offsetHeight);
+                        }
+                        obj.scrollBtn.style.top = parseInt(differences.y) + "px";
+                        break;
+                }
+                scroll();
+            }
+
+            function scroll() {
+                switch (direction) {
+                    case "vertical":
+                        ele.childNodes[1].style.marginTop = (-parseInt(obj.scrollBtn.style.top) / ele.offsetHeight) * 100 + "%";
+                        break;
+                }
+            }
+
+            function getScrollArea() {
+                var tempObj = {
+                    W: 0,
+                    H: 0
+                };
+                for (var node in ele.childNodes) {
+                    if (ele.childNodes[node].offsetHeight) {
+                        tempObj.H += ele.childNodes[node].offsetHeight;
+                        tempObj.W = obj.W > ele.childNodes[node].offsetWidth ? tempObj.W : ele.childNodes[node].offsetWidth;
+                    }
+                }
+                return tempObj;
+            }
+
+            function updatePosition() {
+                document.getElementById("xstart").innerHTML = obj.xStart;
+                document.getElementById("ystart").innerHTML = obj.yStart;
+                document.getElementById("xcurr").innerHTML = obj.xCurr;
+                document.getElementById("ycurr").innerHTML = obj.yCurr;
+                document.getElementById("top").innerHTML = obj.scrollBtn.style.top;
+                document.getElementById("left").innerHTML = obj.scrollBtn.style.left;
+            }
+
+            constructor();
+            return obj;
+        }
+        new scrollBar("conversa", "vertical");
+    };
+
+    init();
+</script>
