--- a/client/perfis/views/perfilDetalhes.ng.html
+++ b/client/perfis/views/perfilDetalhes.ng.html
@@ -1,4 +1,4 @@
-<div class="container margin-top-30 space-footer background-blacked border-white">
+<div class="body-side-padding margin-top-30 space-footer background-blacked border-white">
 
     <ng-include src="'client/barra-controle.html'"></ng-include>
 
