--- a/client/trajetoria/views/trajetoria-de-desenvolvimento.ng.html
+++ b/client/trajetoria/views/trajetoria-de-desenvolvimento.ng.html
@@ -1,14 +1,11 @@
 <div class="body-side-padding margin-top-30 space-footer background-blacked border-white">
 
-    <ng-include src="'client/barra-controle.html'"></ng-include>
-
-
     <div id="trajetoria-de-desenvolvimento">
 
         <h3 class="text-center">Trajetória de Desenvolvimento</h3>
 
         <div>
-            <table class="table text-center table-responsive trajetoria margin-top-30">
+            <table class="table text-center table-responsive trajetoria margin-top-60">
                 <thead>
                     <tr>
                         <td width="15%" bgcolor="#80C8A4">
@@ -29,8 +26,8 @@
                         <td width="30%" bgcolor="#005FEA">
                             30%
                         </td>
-                        <td width="20%" bgcolor="#C63E59">
-                            20%
+                        <td width="2%" bgcolor="#C63E59">
+                            2%
                         </td>
                     </tr>
                 </thead>
@@ -73,10 +70,23 @@
                             03 a 05/12
                         </td>
                         <td>
+
+                            <div class="flag">
+                                <div class="atraso icon"></div>
+                                <small class="legenda">Atraso</small>
+                                <div class="linha"></div>
+                            </div>
+
                             <strong>Desenvolvimento</strong> <br/>
                             17 a 20/12
                         </td>
                         <td>
+                            <div class="flag">
+                                <div class="atual icon"></div>
+                                <small class="legenda">Você está aqui</small>
+                                <div class="linha"></div>
+                            </div>
+
                             <strong>2 Entrega</strong> <br/>
                             17 a 20/12
                         </td>
