--- a/client/styles/maran.css
+++ b/client/styles/maran.css
@@ -12,3 +12,10 @@
 .accounts-dialog{
 	margin-top:30px !important;
 }
+
+form[name="EmpresaForm"] textarea { 
+	height: 200px !important;
+}
+ .editable-text, .editable-textarea{
+	width: 100% !important;
+}
