--- a/client/trajetoria/views/visualizar-trajetoria.html
+++ b/client/trajetoria/views/visualizar-trajetoria.html
@@ -5,6 +5,7 @@
     <div id="trajetoria-de-desenvolvimento">
 
         <h3 class="text-center">Trajetória de Desenvolvimento</h3>
+
         <div>
             <table class="table text-center table-responsive trajetoria margin-top-30">
                 <thead>
@@ -71,8 +72,11 @@
                             03 a 05/12
                         </td>
                         <td>
-                            <strong>Desenvolvimento</strong> <br/>
-                            17 a 20/12
+                            <div class="active">
+                                <strong>Desenvolvimento</strong> <br/>
+                                17 a 20/12
+                                <div class="linhas-verticais"></div>
+                            </div>
                         </td>
                         <td>
                             <strong>2 Entrega</strong> <br/>
@@ -91,8 +95,8 @@
             </table>
         </div>
 
-        <div class="border-white margin-top-30 col-md-10 pull-right background-grey trajetoria-detalhe no-padding">
-            <div class="col-md-4">
+        <div class="border-white col-md-10 pull-left background-grey trajetoria-detalhe no-padding">
+            <div class="col-md-4 col-xs-6">
                 <h4>Descrição</h4>
 
                 <p>Lorem ipsum dolor sit amet, consectetur t, consectetur adipisicing elit.reprehenderit?</p>
@@ -103,27 +107,27 @@
 
                 <p>10/11/2015 a 20/11/2015</p>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 col-xs-6">
                 <h4>Ações</h4>
 
-                <p>1 - Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis delectus eius natus nec.</p>
+                <p><strong>1</strong> - Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis delectus eius natus nec.</p>
 
-                <p>2 - Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus archi.</p>
+                <p><strong>2</strong> - Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus archi.</p>
 
-                <p>3 - Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto deserunt dicta dolore eum!</p>
+                <p><strong>3</strong> - Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto deserunt dicta dolore eum!</p>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 col-xs-12">
                 <h4>Recompensa</h4>
 
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad amet corporis doloremque ducimus et lab?</p><br/>
 
                 <div>
-                    <div class="col-md-7 center-block float-none">
+                    <div class="col-md-9 col-lg-7 col-xs-6 center-block float-none">
                         <a class="btn btn-default btn-100-percent" href="/cadastroEmpresa">Adiantar Conclusão</a>
                     </div>
                     <br/>
 
-                    <div class="col-md-7 center-block float-none">
+                    <div class="col-md-9 col-lg-7 col-xs-6 center-block float-none">
                         <a class="btn btn-default btn-100-percent" href="/perfil">Solicitar alteração</a>
                     </div>
                 </div>
