--- a/client/perfis/views/meuPerfil.html
+++ b/client/perfis/views/meuPerfil.html
@@ -92,21 +92,21 @@
 
           <div class="col-xs-3 col-sm-4 profile-boxes border-white report">
               <p>
-                  <button class="btn btn-default profile-actions">
+                  <button class="btn btn-default profile-actions" ng-click="setCurrentView(2)">
                       <span class="legenda"><i class="fa fa-commenting-o"></i> <span class="hidden-xs">Mensagens</span></span>
                       <span class="numero"></span>
                   </button>
               </p>
               <p>
-                  <button class="btn btn-default profile-actions">
+                  <button class="btn btn-default profile-actions" ng-click="setCurrentView(0)">
                       <span class="legenda"><i class="fa fa-calendar"></i> <span class="hidden-xs">Agenda</span></span>
-                      <span class="numero">0</span>
+                      <span class="numero">{{numCompromissos}}</span>
                   </button>
               </p>
               <p>
-                  <button class="btn btn-default profile-actions">
+                  <button class="btn btn-default profile-actions" ng-click="setCurrentView(1)">
                       <span class="legenda"><i class="fa fa-group"></i> <span class="hidden-xs">Ações de mentoria</span></span>
-                      <span class="numero">{{$root.currentUser.profile.requisicoes.length}}</span>
+                      <span class="numero">{{solicitacoes.length}}</span>
                   </button>
               </p>
           </div>
@@ -133,10 +133,8 @@
       </div>
   </div>
 
-
-    <!-- Calendario daqui pra baixo-->
-
-    <div class="row profile-border">
+    <!-- VIew da agenda baixo-->
+    <div class="row profile-border" ng-show="showView(0)">
         <div class="col-md-4">
             <div class="row profile-border margin-top-30 space-footer">
                 <div id="agendaDia" class="text-center">
@@ -150,7 +148,34 @@
             </div>
         </div>
     </div>
-    <!-- fim da porra do calendário, daqui pra baixo estão as outras telas de choradeira (Mensagens e ações da mentoria,
 
-    que na real são as solicitaçoes pra aceitar PORRA!) -->
+
+
+    <!-- View das ações da mentoria-->
+    <div class="row profile-border" ng-show="showView(1)">
+      <h3>Novas Solicitações</h3>
+       <div class="col-md-12" ng-repeat="solicitacao in solicitacoes">
+         <h3>{{solicitacao.event.title}}</h3>
+           <div class="col-md-4">
+             <p>
+               {{solicitacao.event.start | date}}
+             </p>
+           </div>
+          <div class="col-md-5">
+            <p>
+              {{solicitacao.event.end | date:"dd/MM/yyyy às h:mm"}}
+            </p>
+          </div>
+          <div class="col-md-2">
+            <button class="btn btn-default" ng-click="aceitarRequisicao(solicitacao)">Aceitar</button>
+         </div>
+         <div class="col-md-2">
+           <button class="btn btn-default" ng-click="negarRequisicao(solicitacao)">Negar</button>
+         </div>
+     </div>
+</div>
+    <!-- View das mensagens -->
+    <div class="row profile-border" ng-show="showView(2)">
+
+    </div>
 </div>
